// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas al Componente GifExpertApp Debe mostrarse correctamente una categoria 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas al Componente GifExpertApp Mostrar una lista categoria 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Marvel"
      key="Marvel"
    />
    <GifGrid
      category="Flores"
      key="Flores"
    />
    <GifGrid
      category="Holas"
      key="Holas"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
    <GifGrid
      category="#"
      key="#"
    />
  </ol>
</Fragment>
`;
